Improve sms notifications
